- UPX 3.94 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress

X.XX - YYYY
- Added ClearWhenComplete=false INI setting to autoclear file list when optimization completes (Lanette Fidrych).
- Added GIF options tab.
- Added Allow Lossy optimizations checkbox in JPEG tab.
- Added TARGA (TGA ICB, VDA, and VST) extensions to the ImageMagick toolchain, and TGA detection by contents.
- Added YUV, YCBCRA, YCBCR, X, UYVY, SUN, SGI, RFG, RGB, RGBA, PTIF, PCL, PCLS, MTV, MVG, MSL, MPR, MPC, MONO, J2C, J2K, INLINE, GRAY, FPX, FAX, EPDF, DPX, DDS, CMYK, CMYKA, CIN, BPG, ART to the ImageMagick toolchain.
- Reenabled Embarcadero's Luna, Metropolis and Windows 10 themes removed in FileOptimizer 9.10, because they work fine again with Windows 10 Anniversary and later.
- Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
- Fixed version display in About window.
- Tweaked the Information window.
- Enabled ImageMagick for JPEG processing when lossy is permitted.
- Updated PCXLite 1.1 x86 and x64 Visual C++ 2017 custom builds.
- Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
- Updated pngquant to 2.10.1.
- Updated ImageMagick to 7.0.6.4 with HDRI support.
- Updated to cppcheck 1.80.
- Some minor optimizations and code cleanup.


10.10 - 2017/07/28
- Increased NSIS installer dictionary size to 216MB thanks to 4gb_patch by NTCore and upgraded to latest NSIS nightly builds. Size reduced from 96MB to 70MB (maadjordan).
- Repacked portable version is now a 7-Zip EXE SFX instead of a ZIP file. Size reduced from 136MB to 66MB.
- Updated pingo to 0.89 x86 and x64 versions.
- Updated to ECT 0.8.2 (da09899) x86 and x64 daily optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick to 7.0.6.3 with HDRI support.

10.00 - 2017/07/21 (5th aniversary release)